adding additional metrics and tweaking colors and layout
